--- a/cliente/templates/cliente/clientes_list.html
+++ b/cliente/templates/cliente/clientes_list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Clientes</title>
@@ -32,5 +33,6 @@
             </tbody>
         </table>
     </div>
+    <script src="{% static 'cliente/js/scripts.js' %}" defer></script>
 </body>
 </html>
