--- a/cliente/templates/cliente/clientes_add.html
+++ b/cliente/templates/cliente/clientes_add.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        {% load static %}
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Agregar Cliente</title>
@@ -89,6 +90,7 @@
                     $("#idMensajes").delay(2000).fadeOut("slow");
                 });
         </script>
+        <script src="{% static 'cliente/js/scripts.js' %}" defer></script>
 
     </body>
 </html>
