--- a/cliente/templates/cliente/contacto.html
+++ b/cliente/templates/cliente/contacto.html
@@ -133,7 +133,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="./scripts.js"></script>
+    <script src="{% static 'cliente/js/scripts.js' %}" defer></script>
   
 </body>
 </html>
