--- a/cliente/templates/cliente/index.html
+++ b/cliente/templates/cliente/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
@@ -36,5 +37,6 @@
         <a href="{% url 'crud' %}" class="btn btn-primary">Ver Clientes</a>
         <a href="{% url 'clientesAdd' %}" class="btn btn-success">Agregar Cliente</a>
     </div>
+    <script src="{% static 'cliente/js/scripts.js' %}" defer></script>
 </body>
 </html>
