--- a/cliente/templates/cliente/productos_list.html
+++ b/cliente/templates/cliente/productos_list.html
@@ -2,18 +2,62 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% load static %}
     <title>Productos</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'cliente/css/estilos.css' %}">
 </head>
 <body>
-    <h1>Lista de Productos</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="btn btn-primary" href="{% url 'recarga' %}">RECARGA DE AGUA</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'index' %}">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'productos' %}">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'servicios' %}">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'nosotros' %}">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'productos_list' %}">Carrito</a>
+                </li>
+                
+            </ul>
+        </div>
+    </nav>
+    <br>
+
+    <h1>Carrito de Compras</h1>
+    
+
+    <h2>Agregar Producto</h2>
+    <form method="POST" action="{% url 'producto_add' %}">
+        {% csrf_token %}
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" required><br>
+        <label for="descripcion">Descripción:</label>
+        <input type="text" id="descripcion" name="descripcion" required><br>
+        <label for="precio">Precio:</label>
+        <input type="number" id="precio" name="precio" step="0.01" required><br>
+        <label for="stock">Cantidad:</label>
+        <input type="number" id="stock" name="stock" required><br>
+        <button type="submit">Agregar</button>
+    </form>
+
     <table>
-        <tr>
-            <th>Nombre</th>
-            <th>Descripción</th>
-            <th>Precio</th>
-            <th>Stock</th>
-            <th>Acciones</th>
-        </tr>
+        
         {% for producto in productos %}
         <tr>
             <td>{{ producto.nombre }}</td>
@@ -28,20 +72,6 @@
         {% endfor %}
     </table>
 
-    <h2>Agregar Producto</h2>
-    <form method="POST" action="{% url 'producto_add' %}">
-        {% csrf_token %}
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required><br>
-        <label for="descripcion">Descripción:</label>
-        <input type="text" id="descripcion" name="descripcion" required><br>
-        <label for="precio">Precio:</label>
-        <input type="number" id="precio" name="precio" step="0.01" required><br>
-        <label for="stock">Stock:</label>
-        <input type="number" id="stock" name="stock" required><br>
-        <button type="submit">Agregar</button>
-    </form>
-
     {% if producto %}
     <h2>Editar Producto</h2>
     <form method="POST" action="{% url 'producto_edit' producto.pk %}">
@@ -52,10 +82,14 @@
         <input type="text" id="descripcion" name="descripcion" value="{{ producto.descripcion }}" required><br>
         <label for="precio">Precio:</label>
         <input type="number" id="precio" name="precio" step="0.01" value="{{ producto.precio }}" required><br>
-        <label for="stock">Stock:</label>
+        <label for="stock">Cantidad:</label>
         <input type="number" id="stock" name="stock" value="{{ producto.stock }}" required><br>
         <button type="submit">Actualizar</button>
     </form>
     {% endif %}
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="{% static 'cliente/js/scripts.js' %}" defer></script>
 </body>
 </html>
