boton compra enlazado a carrito compra

--- a/cliente/templates/cliente/indexBefine.html
+++ b/cliente/templates/cliente/indexBefine.html
@@ -82,7 +82,8 @@
                 <center>
                     <h5 class="card-title">Recarga de Agua</h5>
                     <p class="card-text">Recarga para botellones</p>
-                    <a href="{% url 'recarga' %}" class="btn btn-primary">Comprar</a>
+                    <a href="{% url 'productos_list' %}" class="btn btn-primary">Comprar</a>
+                    
                 </center>
             </div>
         </div>
