--- a/cliente/templates/cliente/productos.html
+++ b/cliente/templates/cliente/productos.html
@@ -56,7 +56,7 @@
                 <center>
                     <h5 class="card-title">Recarga de Agua</h5>
                     <p class="card-text">Recarga para botellones</p>
-                    <a href="./recarga.html" class="btn btn-primary">Comprar</a>
+                    <a href="{% url 'productos_list' %}" class="btn btn-primary">Comprar</a>
                 </center>
             </div>
         </div>
@@ -67,7 +67,7 @@
                 <center>
                     <h5 class="card-title">Botellón de Agua</h5>
                     <p class="card-text">Capacidad: 20 litros</p>
-                    <a href="./botellon.html" class="btn btn-primary">Comprar</a>
+                    <a href="{% url 'productos_list' %}" class="btn btn-primary">Comprar</a>
                 </center>
             </div>
         </div>
@@ -78,7 +78,7 @@
                 <center>
                     <h5 class="card-title">Dispensador de Agua</h5>
                     <p class="card-text">Dispensador eléctrico</p>
-                    <a href="./dispensador.html" class="btn btn-primary">Comprar</a>
+                    <a href="{% url 'productos_list' %}" class="btn btn-primary">Comprar</a>
                 </center>
             </div>
         </div>
@@ -89,7 +89,7 @@
                 <center>
                     <h5 class="card-title">Pack de Agua</h5>
                     <p class="card-text">Pack de 6 botellas de 1 litro</p>
-                    <a href="./pack.html" class="btn btn-primary">Comprar</a>
+                    <a href="{% url 'productos_list' %}" class="btn btn-primary">Comprar</a>
                 </center>
             </div>
         </div>
