--- a/cliente/templates/cliente/recarga.html
+++ b/cliente/templates/cliente/recarga.html
@@ -54,7 +54,7 @@
                     <p class="card-text">Recarga para botellones de 20 litros</p>
                     <p class="card-text">Precio $2.500</p>
                     <p class="card-text">Envíos a todo Santiago</p>
-                    <a href="./comprar.html" class="btn btn-primary">Comprar</a>
+                    <a href="{% url 'productos_list' %}" class="btn btn-primary">Comprar</a>
                 </center>
             </div>
         </div>
