carrito a todos los html

--- a/cliente/templates/cliente/contacto.html
+++ b/cliente/templates/cliente/contacto.html
@@ -40,9 +40,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'productos_list' %}">Carrito</a>
+                </li>
+                
             </ul>
         </div>
     </nav>
+    <br>
 
     <h1><!-- modal -->
         <button type="button" class="btn-custom" data-toggle="modal" data-target="#exampleModal">
