--- a/cliente/templates/cliente/index.html
+++ b/cliente/templates/cliente/index.html
@@ -29,9 +29,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'productos_list' %}">Carrito</a>
+                </li>
+                
             </ul>
         </div>
     </nav>
+    <br>
     <div class="container">
         <h1>Bienvenido a la Gestión de Clientes</h1>
         <a href="{% url 'crud' %}" class="btn btn-primary">Ver Clientes</a>
