--- a/cliente/templates/cliente/clientes_add.html
+++ b/cliente/templates/cliente/clientes_add.html
@@ -29,9 +29,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'productos_list' %}">Carrito</a>
+                    </li>
+                    
                 </ul>
             </div>
         </nav>
+        <br>
         <div class="container" style="text-align: center;">
             <h2 class="text-center">Formulario CRUD para clientes</h2><br>
             <form action="{% url 'clientesAdd' %}" method="POST">
