--- a/cliente/templates/cliente/productos_list.html
+++ b/cliente/templates/cliente/productos_list.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'cliente/css/estilos.css' %}">
 </head>
 <body>
+    <center>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="btn btn-primary" href="{% url 'recarga' %}">RECARGA DE AGUA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -91,5 +92,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="{% static 'cliente/js/scripts.js' %}" defer></script>
+    </center>
 </body>
 </html>
