--- a/cliente/templates/cliente/recarga.html
+++ b/cliente/templates/cliente/recarga.html
@@ -32,9 +32,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'productos_list' %}">Carrito</a>
+                </li>
+                
             </ul>
         </div>
     </nav>
+    <br>
 
     <h1>
         <button type="button" class="btn-custom" data-toggle="modal" data-target="#exampleModal">
