--- a/cliente/templates/cliente/servicios.html
+++ b/cliente/templates/cliente/servicios.html
@@ -31,9 +31,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'productos_list' %}">Carrito</a>
+                </li>
+                
             </ul>
         </div>
     </nav>
+    <br>
 
 
     
