--- a/cliente/templates/cliente/contacto.html
+++ b/cliente/templates/cliente/contacto.html
@@ -58,7 +58,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-12 text-center">
-                <img src="img/contacto1.jpg" alt="Logo de la Empresa" class="img-fluid mb-4" style="max-width: 200px;">
+                <img src="{% static 'cliente/img/contacto1.jpg' %}" alt="Logo de la Empresa" class="img-fluid mb-4" style="max-width: 200px;">
                 <h1>Contacto</h1>
                 <p class="lead">Contacto befine.cl@gmail.com</p>
                 <br>
